--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-    
+
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
@@ -16,30 +16,35 @@
         android:icon="@drawable/block_msm"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-        <receiver android:name=".BootBroadcastReceiver">
+        <receiver android:name="com.eddy.emsmfliter.BootBroadcastReceiver" >
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        
-        <!-- 
+
+        <!--
         <receiver android:name=".EMsmReceiver">
             <intent-filter android:priority="100">
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
-         -->
-         
-        <service android:name=".EMsmFliterService"></service>
+        -->
+
+        <service android:name="com.eddy.emsmfliter.EMsmFliterService" >
+        </service>
 
         <activity
             android:name="com.eddy.emsmfliter.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.eddy.emsmfliter.FliterSettingAct"
+            android:label="@string/title_activity_fliter_setting" >
         </activity>
     </application>
 
